# shoot-game

./: .gitignore  Cargo.toml  README.md  build.ps1  build.sh  index.html  shoot.js  style.css
.github/workflows/: ci.yml  deploy.yml
examples/: bosses.rs  enemies.rs  jets.rs  projectiles.rs
src/: lib.rs  main.rs
src/entities/: boss.rs  bullet.rs  enemy.rs  mod.rs  player.rs  shield.rs  weapons.rs
src/game/: collision.rs  mod.rs  scroll.rs  states.rs
src/geometry/: mod.rs  renderer.rs  shapes.rs
src/storage/: mod.rs  recharge.rs  web_storage.rs
src/ui/: enhance.rs  hud.rs  input.rs  menu.rs  mod.rs  upgrade.rs
tools/: subset_font.py
web/: index.html  style.css
