[package]
name = "shoot"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "A geometry shooting game built with Bevy"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = []
web = []
debug = ["bevy/debug"]

[dependencies]
bevy = { version = "0.17.3", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_asset",
    "bevy_state",
    "webgl2",
    "png",
    "x11",
    "wayland",
    "multi_threaded",
] }
bevy_prototype_lyon = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9"
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Storage",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlCanvasElement",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "console",
    "CssStyleDeclaration",
    "EventTarget",
    "Event",
    "KeyboardEvent",
    "FocusEvent",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
console_log = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
dirs = "5.0"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1

[profile.release.package."*"]
opt-level = "z"
